--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-nav></app-nav>
   <div id = "wrapper">
     <app-sidebar></app-sidebar>
+    <ng4-loading-spinner> </ng4-loading-spinner>
     <router-outlet></router-outlet>
   </div>
 <app-footer></app-footer>
