homepage and logo

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,33 +1,103 @@
-<!-- First Container -->
-<div class="container-fluid bg-1 text-center">
-    <h3 class="margin">Financial Investment Advising and Tracking</h3>
+<!-- banner -->
+<div class="jumbotron jumbotron-fluid" id="banner" style="background-image: url(../../../assets/img/banner-finance.png);">
+  <div class="container text-center text-md-left">
+      <header>
+          <div class="row justify-content-between">
+              <div class="col-2">
+                  <img src="../../../assets/img/logot.PNG">
+              </div>
+              <div class="col-6 align-self-center text-right">
+                  <a href="#" data-toggle="modal" data-target="#login-modal" class="text-white lead">Login</a>
+              </div>
+          </div>
+      </header>
+      <h1 class="display-3 text-white font-weight-bold my-5">
+        Financial Investment<br>
+        Advising & Tracking
+      </h1>
+      <p class="lead text-white my-4">
+          FIAT is the smart portfolio for the frugal investor, track your investments by creating unlimited portfolios & watchlists.
+          <br> Gain valuable insights by attaching robo-advisors to your portfolios to advise you on best actions for your investments.
+      </p>
+      <a href="#" data-toggle="modal" data-target="#register-modal" class="btn my-4 font-weight-bold atlas-cta cta-green">Register Now</a>
   </div>
-  <br><br>
-  <!-- Second Container -->
-  <div class="container-fluid bg-2 text-center">
-   <a href="#" data-toggle="modal" data-target="#login-modal" class="btn btn-default btn-lg">LOGIN</a>
-   <a href="#" data-toggle="modal" data-target="#register-modal" class="btn btn-default btn-lg">REGISTER</a>
-  </div>
-  
-  <br><br>
-  <!-- Third Container (Grid) -->
-  <div class="container-fluid bg-3 text-center">    
-    <h3 class="margin">What we do</h3><br>
-    <div class="row">
-      <div class="col-sm-4">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <img src="assets/img/placeholder.png" class="img-responsive margin" style="width:100%" alt="Image">
-      </div>
-      <div class="col-sm-4"> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <img src="assets/img/placeholder.png" class="img-responsive margin" style="width:100%" alt="Image">
-      </div>
-      <div class="col-sm-4"> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <img src="assets/img/placeholder.png" class="img-responsive margin" style="width:100%" alt="Image">
-      </div>
+</div>
+<!-- three-blcok -->
+<div class="jumbotron jumbotron-fluid feature" id="feature-first">
+    <div class="container my-5">
+        <div class="row justify-content-between text-center text-md-left">
+            <div class="col-md-6">
+                <h2 class="font-weight-bold">FIAT Portfolios</h2>
+                <p class="my-4">Create unlimited portfolios and watchlists
+                    <br>  to track all your stocks across a variety of exchanges</p>
+                <a href="#" data-toggle="modal" data-target="#register-modal" class="btn my-4 font-weight-bold atlas-cta cta-blue">Register</a>
+            </div>
+            <div class="col-md-6 align-self-center">
+                <img src="../../../assets/img/stocks1.jpg" alt="Take a look inside" class="mx-auto d-block">
+            </div>
+        </div>
     </div>
   </div>
+<!-- feature (skew background) -->
+<div class="jumbotron jumbotron-fluid feature" id="feature-last">
+  <div class="container my-5">
+      <div class="row justify-content-between text-center text-md-left">
+          <div class="col-md-6">
+              <h2 class="font-weight-bold">FIAT Advisors</h2>
+              <p class="my-4">Use our ready-made or create custom advisors
+                  <br>  to give you advice on the assets within your portfolios.</p>
+              <a href="#" data-toggle="modal" data-target="#register-modal" class="btn my-4 font-weight-bold atlas-cta cta-blue">Register</a>
+          </div>
+          <div class="col-md-6 align-self-center">
+              <img src="../../../assets/img/stocks1.jpg" alt="Take a look inside" class="mx-auto d-block">
+          </div>
+      </div>
+  </div>
+</div>
+<!-- feature (green background) -->
+<div class="jumbotron jumbotron-fluid feature" id="feature-last">
+  <div class="container">
+      <div class="row justify-content-between text-center text-md-left">
+          <div class="col-md-6 flex-md-last">
+              <h2 class="font-weight-bold">FIAT Dashboard</h2>
+              <p class="my-4">
+                  View your personalized dashboard detailing your investments
+                  <br> and keeping you up to date with the latest headlines.
+              </p>
+              <a href="#" data-toggle="modal" data-target="#register-modal" class="btn my-4 font-weight-bold atlas-cta cta-blue">Register</a>
+          </div>
+          <div class="col-md-6 align-self-center flex-md-first">
+              <img src="../../../assets/img/stocks1.jpg" alt="Safe and reliable" class="mx-auto d-block">
+          </div>
+      </div>
+  </div>
+</div>
+
+<!-- extended footer -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-4 col-md-2 py-2 align-self-center">
+              <img src="../../../assets/img/tmx.png" class="mx-auto d-block">
+          </div>
+          <div class="col-sm-4 col-md-2 py-2 align-self-center">
+              <img src="../../../assets/img/nasdaq.png" class="mx-auto d-block">
+          </div>
+          <div class="col-sm-4 col-md-2 py-2 align-self-center">
+              <img src="../../../assets/img/nyse.png" class="mx-auto d-block">
+          </div>
+          <div class="col-sm-4 col-md-2 py-2 align-self-center">
+              <img src="../../../assets/img/yahoo.png" class="mx-auto d-block">
+          </div>
+          <div class="col-sm-4 col-md-2 py-2 align-self-center">
+              <img src="../../../assets/img/google.png" class="mx-auto d-block">
+          </div>
+          <div class="col-sm-4 col-md-2 py-2 align-self-center">
+              <img src="../../../assets/img/angular.png" class="mx-auto d-block">
+          </div>
+      </div>
+  </div>
+</div>
   
   <div class="modal fade" id="login-modal" role="dialog">
       <div class="modal-dialog">
