--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top" *ngIf="nav.visible">
 
-    <a class="navbar-brand mr-1" href="index.html" routerLink="/">FIAT</a>
+    <a class="navbar-brand mr-1" href="index.html" routerLink="/"><img src="../../../assets/img/onlylogo.PNG" style="max-width: 40px; max-height: 40px">&nbsp;&nbsp;FIAT</a>
   
     <!-- Navbar -->
     <ul class="navbar-nav ml-auto">
