fixes to run locally

--- a/src/app/component/user-profile/user-profile.component.html
+++ b/src/app/component/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>User Profile</h1>
-  <form #registrationForm="ngForm">
+  <form #registrationForm="ngForm" *ngIf="user">
     <div class="form-group">
       <label for="name">Username</label>
       <input type="text" class="form-control" id="username" required [(ngModel)]="user.username" name="username" #username="ngModel" disabled>
