--- a/src/app/component/portfolio/current-portfolio/current-portfolio.component.html
+++ b/src/app/component/portfolio/current-portfolio/current-portfolio.component.html
@@ -9,7 +9,7 @@
               <div class="card-body">
                   <div class="d-flex align-items-center" width="100%">
                       <div class="mr-auto p-2">
-                          <button class="btn btn-dark" (click)="openModal('0',0, portfolioID)">Trade</button>
+                          <button class="btn btn-dark" (click)="openModal('0',0, portfolioID)">Buy New Asset</button>
                       </div>
                       <div class="mr-auto p-2">
                           <h1 *ngIf="userPortfolio">{{userPortfolio.portfolioName}}</h1>
@@ -32,7 +32,7 @@
                         <table class = "table table-borderless" width = 100% cellspacing = "0">
                             <thead>
                               <th class="text-center" style="font-size: 14px">CURRENT VALUE OF PORTFOLIO</th>
-                              <th class="text-center" style="font-size: 14px">GAIN/LOSS                  </th>
+                              <th class="text-center" style="font-size: 14px">CURRENT GAIN/LOSS               </th>
                               <th class="text-center" style="font-size: 14px">TOTAL INVESTED:                 </th>
                               <th class="text-center" style="font-size: 14px">TOTAL PULLED OUT:               </th>
                               <th class="text-center" style="font-size: 14px">TOTAL REALIZED GAIN:            </th>
@@ -70,7 +70,7 @@
                     <thead>
                         <tr> 
                           <th>Symbol</th>
-                          <th>Current Price</th>
+                          <th>Current Price (USD)</th>
                           <th>Average Buy Price</th>
                           <th>Shares Owned</th>
                           <th>Current Total</th>
@@ -100,7 +100,6 @@
       <!--CHART-->
       <div class="col-4">
           <div class="card text-black bg-light mb-3" style="min-width: 100%">
-              <div class="card-header" *ngIf="stockData">5 Year Chart</div>
               <div class="card-body">
                   <canvas #portfolioChart>{{ chart }}</canvas>
               </div>
