--- a/src/app/component/user-profile/user-profile.component.html
+++ b/src/app/component/user-profile/user-profile.component.html
@@ -72,7 +72,7 @@
         </div>
 <div class="container">
   
-  <form #registrationForm="ngForm">
+  <form #registrationForm="ngForm" *ngIf="user">
     <div class="form-group">
       <label for="alterEgo">New Password</label>
       <input type="text" class="form-control" id="password" required [(ngModel)]="user.password" name="password" #password="ngModel">
